# google-adk-box-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
box_agent/: agent.py  multi_agent.py
box_agent/sub_agents/: box_agent.py  box_agent_ai.py  box_agent_full.py  box_agent_generic.py
box_agent/tools/: box_agent_tools.py
